<resources>
    <string name="app_name">Book_Sell</string>
    <string name="username">User name or Email</string>
    <string name="password">PassWord</string>
    <string name="user">User name</string>
    <string name="login">Log In</string>
    <string name="forgot">Forgot your password</string>
    <string name="signin">Sign In?</string>
    <string name="end">$$$$$$$$$$$$Code by Kim Thoa.$$$$$$$$$$$</string>
    <string name="titleSignUp">Sign Up </string>
    <string name="mauser">User name</string>
    <string name="enterUser">Enter User name</string>
    <string name="enterPass">Enter Your PassWord</string>
    <string name="enterPassagain">Enter Your PassWord Again</string>
    <string name="email">Email</string>
    <string name="gioitinh">Giới tính</string>
    <string name="quequan">Quê quán</string>
    <string name="sothich">Sở thích</string>
    <string name="repass">RePassword</string>
    <string name="enter_mail">Enter mail</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="gioitinh1">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="home_town">Home town</string>
    <string name="pass1">Password from 8 to 15 characters</string>
    <string name="enter_your_hobby">Enter your hobby</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_date">Select date</string>
    <string name="hobby">Hobby</string>
    <string name="gender">Gender</string>
</resources>
