<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="30dp"
        android:text="@string/titleSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#2196F3"
            android:textStyle="bold"
            android:text="@string/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <EditText
            android:id="@+id/signupactivity_username"
            android:hint="@string/enterUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#2196F3"
            android:textStyle="bold"
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <EditText
            android:id="@+id/signupactivity_pass"
            android:hint="@string/pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#2196F3"
            android:textStyle="bold"
            android:text="@string/repass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <EditText
            android:id="@+id/signupactivity_passAgain"
            android:hint="@string/enterPassagain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#2196F3"
            android:textStyle="bold"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <EditText
            android:id="@+id/signupactivity_email"
            android:hint="@string/enter_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#2196F3"
            android:textStyle="bold"
            android:text="@string/gioitinh1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/male"
                android:id="@+id/signupactivity_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </RadioButton>
            <RadioButton
                android:layout_marginLeft="30dp"
                android:text="@string/female"
                android:id="@+id/signupactivity_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </RadioButton>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#2196F3"
            android:textStyle="bold"
            android:text="@string/date_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/signupactivity_date"
            android:hint="@string/select_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#2196F3"
            android:textStyle="bold"
            android:text="@string/home_town"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <EditText
            android:id="@+id/signupactivity_quequan"
            android:hint="Enter your home town"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#2196F3"
            android:textStyle="bold"
            android:text="Hobby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <EditText
            android:id="@+id/signupactivity_soThich"
            android:hint="@string/enter_your_hobby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>
    <Button
        android:id="@+id/signupactivity_btnSignUp"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>
</LinearLayout>